[gd_scene load_steps=4 format=3 uid="uid://m5sswa7itdly"]

[ext_resource type="LabelSettings" uid="uid://dus1i42bqovhx" path="res://sh_48_red.tres" id="1_7blce"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="1_8fct1"]
[ext_resource type="AudioStream" uid="uid://c2bme8uvdofuo" path="res://assets/audio/game_over.wav" id="3_rctk2"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8fct1")

[node name="GameOverLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Game Over"
label_settings = ExtResource("1_7blce")
uppercase = true

[node name="SpaceLabel" type="Label" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Press Space"
label_settings = ExtResource("1_7blce")
uppercase = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_rctk2")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
